--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "zendframework/zend-stdlib": "~2.7",
         "zendframework/zend-expressive-fastroute": "^1.0",
         "aura/di": "3.0.*@beta",
-        "zendframework/zend-expressive-twigrenderer": "^1.0"
+        "zendframework/zend-expressive-twigrenderer": "^1.0",
+        "mtymek/expressive-config-manager": "^0.4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
